# motherboard

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  MEMORY.md  README.md  docker-compose.prod.yml  package.json  skills-lock.json  turbo.json
.agents/skills/nextjs-best-practices/: SKILL.md
apps/api/: README.md  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 3de79b987bc8_initial_schema.py
apps/api/app/: __init__.py  config.py  database.py  dependencies.py  main.py
apps/api/app/db/: __init__.py  models.py  seed_data.py  seeder.py
apps/api/app/events/: __init__.py
apps/api/app/iam/: __init__.py  audit.py  constants.py  policy.py  principal.py
apps/api/app/plugin_sdk/: __init__.py
apps/api/app/provisioning/: __init__.py
apps/api/app/routers/: __init__.py  audit.py  forks.py  groups.py  health.py  iam.py  plugins.py  sync.py  users.py
apps/api/app/schemas/: __init__.py  audit.py  forks.py  groups.py  iam.py  plugins.py  sync.py  users.py
apps/api/tests/: conftest.py  test_audit_plugins_health.py  test_cors.py  test_groups_router.py  test_iam_policy.py  test_phase1.py  test_users_router.py
apps/web/: middleware.ts  package.json  tailwind.config.js  tsconfig.json
apps/web/app/: layout.tsx  not-found.tsx  page.tsx
apps/web/app/dashboard/: layout.tsx
apps/web/components/: BlurText.tsx  CapabilitiesSection.tsx  FadingVideo.tsx  HeroSection.tsx
apps/web/lib/: auth.ts  users.ts
docker/: api.Dockerfile  web.Dockerfile
docs/: cors_security_guide.md  legal_governance_rules.md  roadmap.md  techspec.md
(+6 files in other folders)
