[project]
name = "bnb-api"
version = "0.1.0"
description = "FastAPI backend core for the bnb-motherboard platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.1",
  "pydantic[email]>=2.7.4",
  "pydantic-settings>=2.3.4",
  "sqlalchemy[asyncio]>=2.0.31",
  "asyncpg>=0.29.0",
  "alembic>=1.13.1",
  "python-jose[cryptography]>=3.3.0",
  "httpx>=0.27.0",
  "redis>=5.0.6",
  "apscheduler>=3.10.4",
  "pytest>=9.1.0",
  "pytest-asyncio>=1.4.0",
]

[tool.fastapi]
entrypoint = "app.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

